fix text invisible of dhcp-host description

--- a/htdocs/luci-static/argon/cascade.less
+++ b/htdocs/luci-static/argon/cascade.less
@@ -1131,6 +1131,13 @@ h5 {
     color: #fff;
 }
 
+#cbi-dhcp-host > .cbi-section-descr {
+  font-size: small;
+  line-height: 1.42857143;
+  padding: 0 1rem 0 1.2rem;
+  color: #9D9D9D;
+}
+
 .cbi-map-descr+fieldset {
     margin-top: 1rem;
 }
